# misc-problem-solutions

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: building-and-testing.yml  coverage.yml  dependency-review.yml  devskim-analysis.yml  fuzz-driver.yml  msvc-code-analysis.yml
benchmark/: .clang-tidy  add_two_numbers_benchmark.cpp  array_concatenation_benchmark.cpp  benchmark.cpp  best_time_to_buy_and_sell_stock_benchmark.cpp  container_with_most_water_benchmark.cpp  contains_duplicate_benchmark.cpp  daily_temperatures_benchmark.cpp  encode_and_decode_strings_benchmark.cpp  evaluate_reverse_polish_notation_benchmark.cpp  factorial_benchmark.cpp  fibonacci_benchmark.cpp  fibonacci_sequence_benchmark.cpp  first_missing_positive_benchmark.cpp  fizzbuzz_benchmark.cpp  gcd_benchmark.cpp  group_anagrams_benchmark.cpp  hamming_weight_benchmark.cpp  house_robber_benchmark.cpp  last_stone_weight_benchmark.cpp  lc_lru_cache_benchmark.cpp  longest_consecutive_sequence_benchmark.cpp  lru_cache_benchmark.cpp  majority_element_benchmark.cpp  maximum_subarray_benchmark.cpp  meeting_rooms_benchmark.cpp  missing_number_benchmark.cpp  move_zeroes_benchmark.cpp  palindrome_benchmark.cpp  palindromic_number_benchmark.cpp  permutation_in_string_benchmark.cpp  primality_benchmark.cpp  product_except_self_benchmark.cpp  set_matrix_zeroes_benchmark.cpp  single_number_benchmark.cpp  sonar_benchmark.cpp  squares_sorted_array_benchmark.cpp  sub_array_sums_benchmark.cpp  subsets_benchmark.cpp  three_sum_benchmark.cpp  (+7 more)
benchmark/common/: math_benchmark.cpp
benchmark/concurrency/: spsc_bound_queue_benchmark.cpp
benchmark/container/: forward_list_benchmark.cpp  forward_list_cycle_benchmark.cpp  list_benchmark.cpp  min_stack_benchmark.cpp
benchmark/graph/: balanced_binary_tree_benchmark.cpp  binary_tree_diameter_benchmark.cpp  breadth_first_search_benchmark.cpp  depth_first_search_benchmark.cpp  invert_binary_tree_benchmark.cpp  subsets_benchmark.cpp
benchmark/math/: math_benchmark.cpp
benchmark/project_euler/: p0001_multiples_of_3_or_5_benchmark.cpp
benchmark/search/: binary_search_benchmark.cpp  koko_eating_bananas_benchmark.cpp  minimum_rotated_element_benchmark.cpp  search_matrix_benchmark.cpp
benchmark/sorting/: bubble_sort_benchmark.cpp  insertion_sort_benchmark.cpp  quicksort_benchmark.cpp
ci/: clang_ubsan_supp  format_code.sh  generate_coverage_report.sh  setup_msvc.cmd
ci/valgrind_supp/: memcheck.supp
cmake/: CodeFormat.cmake  CompileOptions.cmake  ForFunDsaConfig.cmake.in
cmake/toolchains/: toolchain.cmake
contrib/: create_stub.sh  new_sol.sh
docs/: developer_notes.md  graph.md  problem_alias.md
fuzz/: .clang-tidy  encode_and_decode_strings_fuzz.cpp  evaluate_reverse_polish_notation_fuzz.cpp  permutation_in_string_fuzz.cpp  squares_sorted_array_fuzz.cpp
fuzz/search/: binary_search_fuzz.cpp  minimum_rotated_element_fuzz.cpp
fuzz/sorting/: bubble_sort_fuzz.cpp  insertion_sort_fuzz.cpp  quicksort_fuzz.cpp
include/forfun/: add_two_numbers.hpp  array_concatenation.hpp  best_time_to_buy_and_sell_stock.hpp  common.hpp  container_with_most_water.hpp  contains_duplicate.hpp  daily_temperatures.hpp  encode_and_decode_strings.hpp  evaluate_reverse_polish_notation.hpp  factorial.hpp  fibonacci.hpp  fibonacci_sequence.hpp  first_missing_positive.hpp  fizzbuzz.hpp  gcd.hpp  group_anagrams.hpp  hamming_weight.hpp  house_robber.hpp  last_stone_weight.hpp  lc_lru_cache.hpp  longest_consecutive_sequence.hpp  lru_cache.hpp  majority_element.hpp  maximum_subarray.hpp  meeting_rooms.hpp  missing_number.hpp  move_zeroes.hpp  palindrome.h  palindrome.hpp  palindromic-number.hpp  palindromic_number.hpp  permutation_in_string.hpp  primality.hpp  product_except_self.hpp  set_matrix_zeroes.hpp  single_number.hpp  sonar.hpp  squares_sorted_array.hpp  sub_array_sums.hpp  subsets.hpp  (+9 more)
include/forfun_c/: add_two_numbers.h  common.h  palindrome.h  single_number.h
src/: common.cpp  contains_duplicate.cpp  factorial.cpp  fibonacci.cpp  fibonacci_sequence.cpp  first_missing_positive.cpp  fizzbuzz.cpp  gcd.cpp  lc-lru-cache.cpp  lc_lru_cache.cpp  lru_cache.cpp  move_zeroes.cpp  palindrome.c  palindrome.cpp  palindromic-number.cpp  palindromic_number.cpp  product_except_self.cpp  sonar.cpp  sub_array_sums.cpp  trie.cpp  two_sum.cpp
src/fizzbuzz/: main.cpp
src/forfun/: add_two_numbers.cpp  array_concatenation.cpp  best_time_to_buy_and_sell_stock.cpp  common.cpp  container_with_most_water.cpp  contains_duplicate.cpp  daily_temperatures.cpp  encode_and_decode_strings.cpp  evaluate_reverse_polish_notation.cpp  fibonacci.cpp  fizzbuzz.cpp  group_anagrams.cpp  hamming_weight.cpp  house_robber.cpp  last_stone_weight.cpp  longest_consecutive_sequence.cpp  lru_cache.cpp  majority_element.cpp  palindrome.cpp  (+18 more)
test/: .clang-tidy  add_two_numbers_c_test.cpp  add_two_numbers_test.cpp  array_concatenation_statictest.cpp  array_concatenation_test.cpp  best_time_to_buy_and_sell_stock_test.cpp  common_test.cpp  container_with_most_water_test.cpp  contains_duplicate_static_test.cpp  contains_duplicate_statictest.cpp  contains_duplicate_test.cpp  daily_temperatures_statictest.cpp  daily_temperatures_test.cpp  encode_and_decode_strings_test.cpp  evaluate_reverse_polish_notation_test.cpp  factorial_statictest.cpp  factorial_test.cpp  fibonacci_sequence_test.cpp  fibonacci_static_test.cpp  fibonacci_test.cpp  first_missing_positive_test.cpp  fizzbuzz.cpp  fizzbuzz_test.cpp  gcd_test.cpp  group_anagrams_test.cpp  hamming_weight_statictest.cpp  hamming_weight_test.cpp  house_robber_test.cpp  last_stone_weight_test.cpp  lc-lru-cache.cpp  lc_lru_cache.cpp  longest_consecutive_sequence_test.cpp  lru_cache.cpp  lru_cache_test.cpp  majority_element_static_test.cpp  majority_element_statictest.cpp  majority_element_test.cpp  maximum_subarray_statictest.cpp  maximum_subarray_test.cpp  meeting_rooms_test.cpp  (+38 more)
(+148 files in other folders)
